--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -9,7 +9,12 @@ postcard = { version = "1.1.1", features = ["use-std"] }
 postcard-rpc = { version = "0.11.3", features = ["use-std"] }
 postcard-schema = { version = "0.2.0", features = ["use-std"] }
 serde = { version = "1.0.217", features = ["std", "derive"] }
-tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
+tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
 
 [dependencies.probe-rs]
-path = "../vendor/probe-rs/probe-rs"
+# path = "../vendor/probe-rs/probe-rs"
+version = "0.26"
+
+[dependencies.template-icd]
+path = "../icd"
+features = ["use-std"]
