--- a/rp2040/Cargo.toml
+++ b/rp2040/Cargo.toml
@@ -4,13 +4,14 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
-embassy-executor        = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
-embassy-rp              = { version = "0.2.0", features = ["rp2040", "unstable-pac", "time-driver", "critical-section-impl"] }
-embassy-sync            = { version = "0.6.0", features = [] }
+# cortex-m                = { version = "0.7.6", features = ["inline-asm"] }
+cortex-m                = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
+
+embassy-executor        = { version = "0.6.0", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
+embassy-stm32           = { version = "0.1.0", features = [ "time-driver-any", "stm32g431cb", "memory-x", "unstable-pac", "exti"]  }
+embassy-sync            = { version = "0.6.2", features = [] }
 embassy-time            = { version = "0.3.2", features = [] }
-embassy-usb             = { version = "0.3.0", features = [] }
-postcard-rpc            = { version = "0.11.0",   features = ["embassy-usb-0_3-server"] }
+postcard-rpc            = { version = "0.11.0" }
 postcard                = { version = "1.1.0" }
 postcard-schema         = { version = "0.2.0", features = ["derive"] }
 portable-atomic         = { version = "1.6.0", features = ["critical-section"] }
@@ -30,7 +31,7 @@ debug = 2
 lto = true
 opt-level = 'z'
 codegen-units = 1
-incremental = false
+# incremental = false
 
 [profile.ci]
 inherits = "dev"
@@ -47,8 +48,6 @@ rpath = false
 [patch.crates-io]
 embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
 embassy-executor     = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
-embassy-rp           = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
 embassy-sync         = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
 embassy-time         = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
-embassy-usb          = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
-embassy-usb-driver   = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
+embassy-stm32        = { git = "https://github.com/embassy-rs/embassy", rev = "32cff6530fdb81066451cc1d3f1fbbb420e985da" }
