--- a/host/Cargo.toml
+++ b/host/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 cobs = "0.2.3"
 postcard = { version = "1.1.1", features = ["use-std"] }
-postcard-rpc = { version = "0.11.3", features = ["use-std"] }
+postcard-rpc = { version = "0.11.5", features = ["use-std"] }
 postcard-schema = { version = "0.2.0", features = ["use-std"] }
 postcard-dyn = { version = "0.2.1" }
 serde = { version = "1.0.217", features = ["std", "derive"] }
@@ -19,3 +19,6 @@ version = "0.29"
 [dependencies.template-icd]
 path = "../icd"
 features = ["use-std"]
+
+[patch.crates-io]
+postcard-rpc = { git = "https://github.com/WattStep/postcard-rpc.git", branch = "increase_timeout_0_11_5" }
